Github deployment changes

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://amitsaini0001.github.io/criteo-project",
+  "homepage": "https://amitsaini0001.github.io/criteo-coding-task",
   "name": "criteo-coding-task",
   "private": true,
   "version": "0.0.0",
